[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "A GraphQL server library implemented in Rust"
documentation = "https://docs.rs/async-graphql/"
edition = "2018"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT/Apache-2.0"
name = "async-graphql"
readme = "README.md"
repository = "https://github.com/async-graphql/async-graphql"
version = "2.1.1"

[features]
apollo_persisted_queries = ["async-mutex", "lru", "sha2"]
apollo_tracing = ["chrono"]
default = [
  "apollo_persisted_queries",
  "apollo_tracing",
  "bson",
  "chrono",
  "chrono-tz",
  "log", # "multipart",
  "string_number",
  "tracing",
  "unblock",
  "url",
  "uuid",
]
multipart = ["bytes", "multer", "tempfile"]
string_number = ["num-traits"]
unblock = ["blocking"]
# Used for doc(cfg())
nightly = []

[dependencies]
async-graphql-derive = {path = "derive", version = "=2.1.1"}
async-graphql-parser = {path = "parser", version = "=2.1.1"}
async-graphql-value = {path = "value", version = "=2.0.5"}

async-stream = "0.3"
async-trait = "0.1.41"
fnv = "1.0.6"
futures-util = {version = "0.3.6", default-features = false, features = ["io"]}
indexmap = "1.6.0"
once_cell = "1.3.1"
pin-project-lite = "0.1.10"
regex = "1.4.1"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.48"
spin = "0.6.0"
static_assertions = "1.1.0"
thiserror = "1.0.21"

# Feature optional dependencies
bson = {version = "1.0.0", optional = true}
chrono = {version = "0.4.15", optional = true}
chrono-tz = {version = "0.5.1", optional = true}
log = {version = "0.4.11", optional = true}
tracing = {version = "0.1.21", optional = true}
url = {version = "2.1.1", optional = true}
uuid = {version = "0.8.1", optional = true, features = ["v4", "serde"]}

# Non-feature optional dependencies
async-mutex = {version = "1.4.0", optional = true}
blocking = {version = "1.0.0", optional = true}
bytes = {version = "0.5.4", optional = true}
lru = {version = "0.6.0", optional = true}
multer = {version = "1.2.2", optional = true}
num-traits = {version = "0.2.12", optional = true}
sha2 = {version = "0.9.1", optional = true}
tempfile = {version = "3.1.0", optional = true}

[dev-dependencies]
async-channel = "1.5.1"
async-std = {version = "1.6.5", features = ["attributes"]}

[package.metadata.docs.rs]
features = ["nightly"]

[workspace]
members = [
  "value",
  "parser",
  "derive", # "integrations/actix-web",  # "integrations/rocket",  # "integrations/tide",  # "integrations/warp",
  #   "benchmark",
]
