[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet", "Antony Blakey <antony@soops.nl>"]
categories = ["network-programming", "asynchronous"]
description = "A GraphQL server library implemented in Rust"
edition = "2018"
homepage = "https://github.com/AntonyBlakey/async-graphql-no-send"
keywords = ["futures", "async", "graphql"]
license = "MIT/Apache-2.0"
name = "async-graphql"
readme = "README.md"
repository = "https://github.com/AntonyBlakey/async-graphql-no-send"
version = "2.1.1"

[features]
default = ["string_number"]
string_number = ["num-traits"]

[dependencies]
async-graphql-derive = {path = "derive", version = "=2.1.1"}
async-graphql-parser = {path = "parser", version = "=2.1.1"}
async-graphql-value = {path = "value", version = "=2.0.5"}

async-stream = "0.3.1"
async-trait = "0.1.50"
fnv = "1.0.7"
futures-util = { version = "0.3.14", default-features = false, features = ["io"] }
indexmap = "1.6.2"
once_cell = "1.7.2"
pin-project-lite = "0.2.6"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
spin = "0.9.0"
static_assertions = "1.1.0"
thiserror = "1.0.24"

# Non-feature optional dependencies
num-traits = { version = "0.2.14", optional = true }

[dev-dependencies]
async-channel = "1.6.1"
async-std = { version = "1.9.0", features = ["attributes"] }

[workspace]
members = [
  "value",
  "parser",
  "derive",
]
